--- a/web/views/index.twig
+++ b/web/views/index.twig
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="jumbotron text-center">
   <div class="container">
-    <a href="/" class="lang-logo">
-      <img src="/images/lang-logo.png">
+    <a href="/" class="favicondusty">
+      <img src="/images/favicondusty">
     </a>
     <h1>Getting Started with PHP on Heroku</h1>
     <p>This is a sample PHP application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
