--- a/web/views/company/about.html
+++ b/web/views/company/about.html
@@ -7,6 +7,6 @@
     <title>DustyJars | About</title>
   </head>
   <body>
-    <a href="../_index.php"> Dusty Jars </a>
+    <a href="../landing.html"> Dusty Jars </a>
   </body>
 </html>
