--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,61 @@
   --color-secondary: #96a3a3;
   --color-accent: #a39c96;
   --color-headings: #1b0760;
-  --color-body: #918ca4;
+  --color-body: #686060;
 }
 
+/*Typography*/
+html {
+  /*62.5% of 16px = 10px*/
+  font-size: 62.5%;
+}
 body {
-  background-color: gold;
+  font-family: Inter, Arial, Helvetica, sans-serif;
+  font-size: 2.4rem;
+  line-height: 1.5;
+  color: var(--color-body);
+}
+
+h1,
+h2,
+h3 {
+  color: var(--color-headings);
+  margin-bottom: 1rem;
+}
+h1 {
+  font-size: 7rem;
+}
+h2 {
+  font-size: 4rem;
+}
+h3 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+p {
+  margin-top: 0;
+}
+
+@media screen and (min-width: 1024px) {
+  body {
+    font-size: 1.8rem;
+  }
+  h1 {
+    font-size: 8rem;
+  }
+  h2 {
+    font-size: 4rem;
+  }
+  h3 {
+    font-size: 2.4rem;
+  }
+}
+
+/* links */
+a {
+  text-decoration: none;
+}
+.link-arrow {
+  color: var(--color-accent);
+  text-transform: uppercase;
 }
