--- a/css/styles.css
+++ b/css/styles.css
@@ -82,14 +82,13 @@ a {
 
 /*Buttons*/
 .btn {
-  border: none;
+  border: 0;
   text-transform: uppercase;
   color: white;
   padding: 2rem 3rem;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
   font-size: 1.8rem;
+  font-weight: 600;
   cursor: pointer;
   border-radius: 40px;
 }
@@ -158,22 +157,22 @@ a {
   color: var(--color-headings);
   font-size: 2rem;
   outline: 0;
-  padding: 1.5 rem 3.5 rem;
+  padding: 1.5rem 3.5rem;
 }
 
-.input_group {
-  border: 1 solid var(--color-border);
+.input-group {
+  border: 1px solid var(--color-border);
   border-radius: var(--border-radius);
   display: flex;
 }
 
-.input_group .input {
-  border: none;
+.input-group .input {
+  border: 0;
   flex-grow: 1;
   padding: 1.5rem 1rem;
 }
 
-.input_group .btn {
+.input-group .btn {
   margin: 4px;
 }
 
